Program halts if error is encountered